--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "test": "npm run eslint && NODE_ENV= npm run mocha",
     "eslint": "eslint src/. test/. --config .eslintrc.json",
-    "dev": "nodemon src/",
+    "dev": "nodemon --inspect=5051 src/",
     "start": "node src/",
     "mocha": "mocha test/ --recursive --exit"
   },
