--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@feathersjs/errors": "^3.3.6",
     "@feathersjs/express": "^1.3.1",
     "@feathersjs/feathers": "^3.3.1",
+    "ajv": "^6.10.0",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
+    "feathers-hooks-common": "^4.20.7",
     "feathers-mongoose": "^7.3.2",
     "helmet": "^3.15.1",
     "mongodb-core": "^3.1.11",
